--- a/Laravel/MyBBS/public/css/style.css
+++ b/Laravel/MyBBS/public/css/style.css
@@ -1,3 +1,6 @@
+a {
+    text-decoration: none;
+}
 .container {
     width: 480px;
     margin: 40px auto;
@@ -16,6 +19,11 @@ h1 > a {
     font-size: 16px;
     font-weight: normal;
     margin-left: auto;
+}
+
+h2 {
+    font-size: 16px;
+    margin-top: 40px;
 }
 
 li {
@@ -59,4 +67,26 @@ button {
     color: red;
     font-size: 14px;
     margin-top: 8px;
+}
+
+.btn {
+    border: none;
+    background: transparent;
+    font-size: 16px;
+    font-weight: normal;
+    color: blue;
+    cursor: pointer;
+    vertical-align: 1px;
+}
+
+.comment_form {
+    display: flex;
+}
+
+.comment_form.btn {
+    margin-left: 8px;
+}
+
+.delete-comment {
+    display: inline-block;
 }
